--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ solana-program = "1.7.4"
 thiserror = "1.0.24"
 spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
 
+arrayref = "0.3.6"
+
 [lib]
 crate-type = ["cdylib", "lib"]
